# CConsole_lib

./: CConsole.h  CConsole_lib.c  CConsole_lib.h  CMakeLists.txt  Documentation.md  Readme.md  build.bat
include/: CConsole_lib.h
src/: CConsole_lib.c  CMakeLists.txt
test/: CMakeLists.txt  demo3_block.txt  demo3_map.txt  menu.txt  test.c
test/res/: menu.txt
